WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228656
REGRESSION (
r273072
): Images do not layout correctly on walmart.com/grocery
https://bugs.webkit.org/show_bug.cgi?id=228656
Summary
REGRESSION (r273072): Images do not layout correctly on walmart.com/grocery
zalan
Reported
2021-07-30 12:57:35 PDT
<
rdar://80418083
>
Attachments
Safari
(271.27 KB, image/png)
2021-07-30 12:57 PDT
,
zalan
no flags
Details
Chrome
(475.69 KB, image/png)
2021-07-30 12:58 PDT
,
zalan
no flags
Details
Patch
(4.82 KB, patch)
2021-07-30 20:08 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(4.82 KB, patch)
2021-07-30 20:52 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq] Patch
(5.92 KB, patch)
2021-08-02 08:37 PDT
,
zalan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2021-07-30 12:57:59 PDT
Created
attachment 434657
[details]
Safari
zalan
Comment 2
2021-07-30 12:58:10 PDT
Created
attachment 434658
[details]
Chrome
Maciej Stachowiak
Comment 3
2021-07-30 16:01:22 PDT
Links to the revision and bug that caused the regression
https://trac.webkit.org/changeset/273072/webkit
https://bugs.webkit.org/show_bug.cgi?id=219538
zalan
Comment 4
2021-07-30 20:08:55 PDT
Created
attachment 434684
[details]
Patch
zalan
Comment 5
2021-07-30 20:52:39 PDT
Created
attachment 434687
[details]
Patch
Sergio Villar Senin
Comment 6
2021-08-02 01:31:11 PDT
On a side note, I believe it'd be great to export the test to the WPT repo.
zalan
Comment 7
2021-08-02 08:31:28 PDT
(In reply to Sergio Villar Senin from
comment #6
)
> On a side note, I believe it'd be great to export the test to the WPT repo.
Thanks for the review. I was surprised to find out that no WPT covered this seemingly very simple case. I even ran WPT locally to see if there was any unexpected progression. Will do it in a follow-up.
zalan
Comment 8
2021-08-02 08:37:08 PDT
Created
attachment 434756
[details]
[fast-cq] Patch
EWS
Comment 9
2021-08-02 08:39:00 PDT
Committed
r280530
(
240162@main
): <
https://commits.webkit.org/240162@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434756
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug