REGRESSION (r273072): Images do not layout correctly on walmart.com/grocery https://bugs.webkit.org/show_bug.cgi?id=228656 <rdar://80418083>

Reviewed by Sergio Villar Senin.

Source/WebCore:

Take the min/max values into account when computing the definite size (https://drafts.csswg.org/css-sizing-3/#definite)
for the flex child.

Test: fast/flexbox/flex-with-min-max-height.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeCrossSizeForChildUsingContainerCrossSize const):

LayoutTests:

* fast/flexbox/flex-with-min-max-height-expected.html: Added.
* fast/flexbox/flex-with-min-max-height.html: Added.


Canonical link: https://commits.webkit.org/240162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280530 268f45cc-cd09-0410-ab3c-d52691b4dbfc